--- a/config.toml
+++ b/config.toml
@@ -13,20 +13,22 @@ title = "Safe With Us Dog Adoption Event"
     weight = 2 
 
 [params]
-    introTitle = "Safe With Us Animal Rescue's Dog Adoption Event"
-    introSubtitle = "Event Details"
-    introPhoto = "/boylston_place.jpeg"
-    logo = "/safe_with_us.png"
+    introTitle = "Dog Adoption Day"
+    introPhoto = "/img/boylston_place.jpeg"
+    logo = "/img/safe_with_us.png"
+    locationTitle = "The Residence at Boylston Place"
+    locationAddress = "615 Heath St, Chestnut Hill, MA"
+    eventDate = "May 14, 2022"
 
     # Enable the darkmode toggle in header
-    darkModeToggle = true
+    darkModeToggle = false
   
     # Enable search in header
     enableSearch = true
 
     # Custom copyright - optional
-    copyright = "Copyright © 2021 - Katheryn Fox · All rights reserved"
-    favicon = "/favicon.svg"
+    copyright = "Copyright © 2022 - Safe With Us Animal Rescue · All rights reserved"
+    favicon = "/fontawesome/paw.svg"
 
     # Color for the intro details and social links block, not applicable for dark mode
     # Supported values: Any color from TailwindCSS default colors
@@ -34,19 +36,11 @@ title = "Safe With Us Dog Adoption Event"
         ascentColor = "bg-blue-100"
 
     # The page bundle that is shown on the front page
-    frontBundle = "blog"
+    frontBundle = "dogs"
 
 [params.homepage.social]
-  # Global params xommon for both languages
-  title = "Follow me"
-  description = "I work on everything coding and tweet developer memes"
-  twitter = "https://twitter.com/"
-  linkedin = "https://linkedin.com/in/"
-  xing = "https://www.xing.com/profile/"
-  github = "https://github.com/"
-  medium = "https://medium.com/"
-  reddit = "https://reddit.com/"
-  dribbble = "https://dribbble.com/"
+  instagram = "https://www.instagram.com/safewithusanimalrescue/?hl=en"
+  facebook = "https://www.facebook.com/safewithusanimalrescue/"
 
 
 [build]
