--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://blist.vercel.app"
+baseurl = "https://jskaza.github.io/safe-with-us"
 metaDataFormat = "yaml"
 title = "Safe With Us Dog Adoption Event"
 
